<resources>
    <string name="app_name">CycleTrackingApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_message">Welcome!\nPlease enter your name and weight</string>
    <string name="name_hint">Enter name</string>
    <string name="weight_hint">Enter Weight(In Kg)</string>
    <string name="continue_text">Continue</string>
    <string name="your_runs">Your Runs</string>
    <string name="stats">Statistics</string>
    <string name="settings">Settings</string>
    <string name="default_timer">00 : 00 : 00</string>
    <string name="precise_permission_rationale">Please choose precise location for more accurate location updates</string>
    <string name="location_permission_rationale">Please provide location permissions to use the tracking service</string>
    <string name="positive_response">OK</string>
    <string name="resume_text">Resume</string>
    <string name="pause_text">Pause</string>
    <string name="average_speed">25.5 km/h</string>
    <string name="stop_watch_time">%1$s : %2$s : %3$s</string>
    <string name="tot_dist">Total Distance</string>
    <string name="tot_cal">Total Calories</string>
    <string name="tot_time">Total Time</string>
    <string name="avg_speed">Average Speed</string>
    <string name="tracker_distance">Distance (KM)</string>
    <string name="tracker_speed">Speed (KPH)</string>
    <string name="tracker_calories">Distance (KCAL)</string>
    <string name="tracker_duration">Duration</string>
    <string name="max_dist">Longest Distance</string>
    <string name="max_cal">Max Calories Burned</string>
    <string name="max_time">Longest Duration</string>
    <string name="max_speed">Max Speed</string>
    <string name="records">Records</string>
    <string name="run_value">%1$s %2$s</string>
</resources>