<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".screens.RecordScreen"
    android:divider="@drawable/basic_divider"
    android:showDividers="middle"
    android:orientation="vertical"
    android:paddingVertical="10dp"
    android:paddingHorizontal="10dp">

    <com.example.cycletrackingapp.custom_views.RecordCard
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:heading="@string/max_dist"
        app:iconDrawable="@drawable/outline_directions_run_24"
        />

    <com.example.cycletrackingapp.custom_views.RecordCard
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:heading="@string/max_cal"
        app:iconDrawable="@drawable/ic_baseline_local_fire_department_24"
        />

    <com.example.cycletrackingapp.custom_views.RecordCard
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:heading="@string/max_time"
        app:iconDrawable="@drawable/ic_baseline_watch_24"
        />

    <com.example.cycletrackingapp.custom_views.RecordCard
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:heading="@string/max_speed"
        app:iconDrawable="@drawable/ic_baseline_speed_24"
        />
</LinearLayout>