<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_bg"
    android:paddingHorizontal="50dp"
    android:paddingVertical="15dp">

    <com.example.cycletrackingapp.custom_views.MultiTextView
        android:id="@+id/tot_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:description="@string/tot_dist"
        app:flexDirection="column"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:valueText="0.002"
        />

    <com.example.cycletrackingapp.custom_views.MultiTextView
        android:id="@+id/tot_calories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:description="@string/tot_cal"
        app:flexDirection="column"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tot_distance"
        app:valueText="0.002" />

    <com.example.cycletrackingapp.custom_views.MultiTextView
        android:id="@+id/tot_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:description="@string/tot_time"
        app:flexDirection="column"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:valueText="0.002" />

    <com.example.cycletrackingapp.custom_views.MultiTextView
        android:id="@+id/avg_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:description="@string/avg_speed"
        app:flexDirection="column"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tot_time"
        app:valueText="0.002" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/graph_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tot_calories">

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>