<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/medium_bg"
    >

    <TextView
        android:id="@+id/welcome_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="152dp"
        android:text="@string/welcome_message"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/large_text"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/name_input"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:paddingVertical="@dimen/input_padding_vertical"
        android:paddingHorizontal="@dimen/input_padding_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_msg"
        android:background="@drawable/input_rounded_corners"
        android:hint="@string/name_hint"
        android:textColorHint="@color/black"
        android:inputType="text"
        android:autofillHints="name"
        />

    <EditText
        android:layout_width="200dp"
        android:id="@+id/weight_input"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/input_padding_vertical"
        android:paddingHorizontal="@dimen/input_padding_horizontal"
        android:layout_marginTop="52dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_input"
        android:background="@drawable/input_rounded_corners"
        android:hint="@string/weight_hint"
        android:textColorHint="@color/black"
        android:inputType="number"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_bg"
        android:gravity="end"
        android:paddingHorizontal="15dp"
        android:paddingVertical="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/continue_text" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
